[agenda] Fix schedule overflow

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -66,7 +66,6 @@
                     position: absolute;
                     margin: 0 8px;
                     width: calc(100% - 16px);
-                    overflow: hidden;
 
                     &:hover {
                         background-color: #F5F5F5;
@@ -76,6 +75,7 @@
                     }
 
                     .talk-content {
+                        height: 100%;
                         overflow: hidden;
 
                         .talk-title {
